# aletheia-gamedb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  about.hbs  about.toml  build.rs  justfile  rustfmt.toml
.forgejo/workflows/: release.yaml
.github/: FUNDING.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: code_lint.yaml  gamedb_lint.yaml  release.yaml  tests.yaml
resources/: gamedb.yaml
resources/flatpak/: moe.spencer.Aletheia.yaml
resources/linux/: aletheia.desktop  moe.spencer.Aletheia.desktop  moe.spencer.Aletheia.metainfo.xml
resources/linux/completions/: aletheia.bash  aletheia.fish
resources/mac/: Info.plist  aletheia.icns
src/: commands.rs  config.rs  dirs.rs  file.rs  gamedb.rs  infer.rs  main.rs  manifest.rs  scanner.rs  ui.rs  updater.rs  utils.rs
src/cli_helpers/: mod.rs  steam.rs
src/commands/: backup.rs  check_for_update.rs  mod.rs  restore.rs  update.rs  update_custom.rs  update_gamedb.rs
src/infer/: backup.rs  mod.rs  restore.rs
src/infer/launchers/: heroic.rs  lutris.rs  mod.rs
src/operations/: backup.rs  mod.rs  restore.rs
src/scanner/: gog.rs  heroic.rs  lutris.rs  mod.rs  steam.rs  xbox.rs
src/ui/: app.rs  handlers.rs  mod.rs
src/ui/handlers/: games.rs  settings.rs
ui/: app.slint  app_logic.slint  updater.slint
ui/components/: button.slint  check_box.slint  dropdown.slint  game_card.slint  nav_item.slint  notification.slint  scrollable.slint  search_bar.slint  text_input.slint  text_label.slint
ui/locale/: aletheia.pot
ui/locale/de/LC_MESSAGES/: aletheia.po
ui/locale/es/LC_MESSAGES/: aletheia.po
ui/locale/et/LC_MESSAGES/: aletheia.po
ui/locale/fr/LC_MESSAGES/: aletheia.po
ui/locale/ja/LC_MESSAGES/: aletheia.po
ui/locale/ru/LC_MESSAGES/: aletheia.po
ui/locale/uk/LC_MESSAGES/: aletheia.po
ui/locale/zh_Hans/LC_MESSAGES/: aletheia.po
ui/logic/: app.slint  game.slint  notification.slint  theme.slint  updater.slint
ui/screens/: about.slint  backup.slint  games.slint  settings.slint
ui/structs/: config.slint  dropdown_option.slint  theme.slint  ui_game.slint
ui/themes/: default.slint
