# SPDX-FileCopyrightText: 2025 Spencer
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "aletheia"
version = "0.1.0"
authors = ["Spencer"]
description = "Game save backup tool"
edition = "2024"
license-file = "LICENSE"

[profile.release]
opt-level = 3
lto = true
strip = true

[features]
updater = ["dep:semver"]

[dependencies]
glob = "0.3.2"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
rfd = "0.15.3"
rusqlite = "0.36.0"
semver = { version = "1.0.26", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
slint = "1.10.0"
steamlocate = "2.0.1"
thiserror = "2.0.12"

[build-dependencies]
slint-build = "1.10.0"

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.20", default-features = false }
