# SPDX-FileCopyrightText: 2025 Spencer
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "aletheia"
version = "1.0.2"
authors = ["Spencer"]
description = "Game save backup tool"
edition = "2024"
license = "AGPL-3.0-only"

[profile.release]
opt-level = 3
lto = true
strip = true

[features]
updater = ["dep:semver"]

[dependencies]
blake3 = "1.8.2"
env_logger = "0.11.8"
glob = "0.3.2"
keyvalues-serde = "0.2.2"
log = "0.4.27"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
rfd = "0.15.3"
semver = { version = "1.0.26", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
steamlocate = "2.0.1"
thiserror = "2.0.12"

[target.'cfg(unix)'.dependencies]
rusqlite = "0.37.0"
slint = { version = "1.12.1", default-features = false, features = ["accessibility", "backend-qt", "compat-1-2", "std"] }

[target.'cfg(windows)'.dependencies]
quick-xml = { version = "0.38.3", features = ["serialize"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
slint = { version = "1.12.1", default-features = false, features = ["accessibility", "backend-winit", "renderer-skia-opengl", "compat-1-2", "std"] }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7.4"

[build-dependencies]
slint-build = "1.12.1"

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.22", default-features = false }
